--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@types/multer": "^2.0.0",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "joi": "^18.0.1",
+    "mongoose": "^8.19.3",
     "multer": "^2.0.2",
     "pug": "^3.0.3"
   },
