--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "joi": "^18.0.1",
     "mongoose": "^8.19.3",
     "multer": "^2.0.2",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
