--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^5.1.0",
     "form-data": "^4.0.5",
     "joi": "^18.0.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.19.3",
     "multer": "^2.0.2",
     "pug": "^3.0.3",
