--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
 DATABASE = "mongodb+srv://username:password@cluster0.jfeqpvm.mongodb.net/database-name"
+JWT_SECRET = "CHUOINGAUNHIEN"
+NODE_ENV = "" # nếu '' là http, nếu 'production' là https
