--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon --exec \"node --inspect -r ts-node/register\" index.ts"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
@@ -14,6 +15,7 @@
     "express": "^5.1.0",
     "form-data": "^4.0.5",
     "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.3",
     "moment": "^2.30.1",
     "mongoose": "^8.19.3",
     "multer": "^2.0.2",
