04. Tạo tài khoản Super Admin

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 DATABASE = "mongodb+srv://username:password@cluster0.jfeqpvm.mongodb.net/database-name"
 JWT_SECRET = "CHUOINGAUNHIEN"
 NODE_ENV = "" # nếu '' là http, nếu 'production' là https
+SUPPER_ADMIN_ID = "IDTAIKHOAN"
+SUPPER_ADMIN_EMAIL = "EMAILTAIKHOAN"
+SUPPER_ADMIN_PASSWORD = "MATKHAUTAIKHOAN"
