01. Chỉ quản trị viên được phép upload file lên file-manager - EC

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ NODE_ENV = "" # nếu '' là http, nếu 'production' là https
 SUPPER_ADMIN_ID = "IDTAIKHOAN"
 SUPPER_ADMIN_EMAIL = "EMAILTAIKHOAN"
 SUPPER_ADMIN_PASSWORD = "MATKHAUTAIKHOAN"
+FILE_MANAGER_SECRET = "CHUOINGAUNHIEN"
