--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@types/cookie-parser": "^1.4.10",
+    "@types/json2csv": "^5.0.7",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "axios": "^1.13.2",
@@ -17,6 +18,7 @@
     "express": "^5.1.0",
     "form-data": "^4.0.5",
     "joi": "^18.0.1",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.3",
     "moment": "^2.30.1",
     "mongoose": "^8.19.3",
