--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/json2csv": "^5.0.7",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
+    "@types/papaparse": "^5.5.2",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
@@ -23,6 +24,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.19.3",
     "multer": "^2.0.2",
+    "papaparse": "^5.5.3",
     "pug": "^3.0.3",
     "slugify": "^1.6.6"
   },
